# WiLaun

./: .gitignore  :normal  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  TAGS  WiLaun.cabal  WiLaun.todo  WiLaun.todo.md  package.yaml  stack.yaml  stack_options
app/: .ReadMenu.hs.swo  FileControl.hs  Main.hs  MenuTypes.hs  OpenMenu.hs  ReadMenu.hs  tags.ow  wilaun.tag
src/: Execution.hs  FileControl.hs  MenuTypes.hs  OpenMenu.hs  ReadMenu.hs
