cabal-version:      2.4
name:               WiLaun
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
description:    Please see the README on GitHub at <https://github.com/WizardNG/WiLaun#readme>
homepage:       https://github.com/WizardNG/WiLaun#readme
bug-reports:    https://github.com/WizardNG/WiLaun/issues

-- The license under which the package is released.
-- license:
author:             Kozlov
maintainer:         wizardng1@gmail.com
copyright:          home
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
        README.md
        CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/WizardNG/WiLaun

executable WiLaun
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
                      --Execution
                      FileControl
                      MenuTypes
                      --OpenMenu
                      ReadMenu

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    ghc-options: -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N

    build-depends:    
          base ^>=4.14.3.0
        --, aeson
        , text
        , bytestring
        , directory
        , extra
        , filepath
        , ghc
        , libiserv
        , unix
        , pretty-simple
    hs-source-dirs:   app
    default-language: Haskell2010
